added a photo to my about section

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -1,1 +1,18 @@
 
+.about-right-page {
+    width: 50%;
+    height: 100%;
+    top: 0;
+    padding-top: 8%;
+    margin-left: 0;
+    position: absolute;
+    right: 0;
+    overflow: hidden;
+}
+
+.profile-pic {
+    width: 50%;
+    height: 70%;
+    position: relative;
+    border-radius: 25px;
+}
