--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -1,6 +1,6 @@
 .nav-bar {
     background: #181818;
-    width: 60px;
+    width: 80px;
     height: 100%;
     position: absolute;
     top: 0;
@@ -14,8 +14,8 @@
         img {
             display: block;
             margin: 8px auto;
-            width: 38px;
-            height: 36px;
+            width: 58px;
+            height: 56px;
 
             &.sub-logo {
                 width: 50px;
@@ -29,15 +29,15 @@
         position: absolute;
         height: 210px;
         top: 50%;
-        margin-top: -120px;
+        margin-top: -140px;
         width: 100%;
 
         a {
-            font-size: 22px;
+            font-size: 28px;
             color: #4d4d4e;
             display: block;
             line-height: 51px;
-            height: 51px;
+            height: 81px;
             position: relative;
             text-decoration: none;
 
@@ -62,7 +62,7 @@
                 font-size: 9px;
                 letter-spacing: 2px;
                 position: absolute;
-                bottom: 0;
+                bottom: 35%;
                 display: block;
                 width: 100%;
                 text-align: center;
@@ -86,6 +86,12 @@
         a.contact-link {
             &::after {
                 content: 'CONTACT';
+            }
+        }
+
+        a.portfolio-link {
+            &::after {
+                content: 'PORTFOLIO';
             }
         }
 
