--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -29,7 +29,7 @@
         position: absolute;
         height: 210px;
         top: 50%;
-        margin-top: -140px;
+        margin-top: -200px;
         width: 100%;
 
         a {
@@ -92,6 +92,12 @@
         a.portfolio-link {
             &::after {
                 content: 'PORTFOLIO';
+            }
+        }
+
+        a.resume-link {
+            &::after {
+                content: 'RESUME';
             }
         }
 
