--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -39,16 +39,9 @@
 }
 
 .about-page,
-.contact-page {
-    .text-zone {
-        position: absolute;
-        left: 10%;
-        top: 40%;
-        transform: translateY(-50%);
-        width: 35%;
-        vertical-align: middle;
-        display: table-cell;
-        max-height: 90%;
+.contact-page,
+.portfolio-page {
+    
 
         h1 {
             font-size: 68px;
@@ -93,5 +86,15 @@
                 animation-delay: 1.6s;
             }
         }
+
+        .text-zone {
+            position: absolute;
+            left: 10%;
+            top: 40%;
+            transform: translateY(-50%);
+            width: 35%;
+            vertical-align: middle;
+            display: table-cell;
+            max-height: 90%;
     }
 }
