--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -20,3 +20,12 @@
 .about-text {
     font-size: 18px;
 }
+
+@media screen and (max-width: 1200px) {
+    .profile-pic {
+        position: initial;
+        width: 100%;
+        height: 0%;
+        overflow: visible;
+    }
+}
