added mobile to resume

--- a/src/components/Resume/index.scss
+++ b/src/components/Resume/index.scss
@@ -9,3 +9,13 @@
 .resume-pic {
     height: 600px;
 }
+
+@media screen and (max-width: 1200px) {
+    .resume-pic {
+        width: 100%;
+    }
+    .resume-link {
+        position: initial;
+    }
+
+}
