--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -23,9 +23,14 @@
 
 @media screen and (max-width: 1200px) {
     .profile-pic {
-        position: initial;
-        width: 100%;
-        height: 0%;
-        overflow: visible;
+        // display: initial;
+        // flex-direction: row;
+        // align-content: center;
+        // align-items: center;
+        // justify-content: center;
+        // width: 80%;
+        // height: 100%;
+        // overflow: scroll;
+        display: none;
     }
 }
