--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -113,20 +113,44 @@
 
 @media screen and (max-width: 1200px) {
     .container.portfolio-page {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
         width: 100%;
         padding: 20px;
         box-sizing: border-box;
 
         h1.page-title {
-            margin-left: 20px;
+            margin-left: 10px;
             margin-top: 20px;
         }
 
         .image-box {
+            display: flex;
+            justify-content: center;
+            align-content: center;
             height: 200px;
             max-width: calc(50% - 10px);
+            // width: 100%;
+            padding: 5px 15px 5px 25px;
 
         }
+            .description {
+                display: none;
+            }
+
+            .title {
+                display: flex;
+                text-align: center;
+                flex-wrap: wrap;
+                font-size: 14px;
+            }
+
+            .btn {
+               text-align: center;
+            }
+
+        
 
     }
 
