--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,4 +1,5 @@
 projects {
+   
     width: 100%;
     height: auto;
     display: flex;
@@ -12,9 +13,11 @@ projects {
     font-size: 60px;
     font-weight: bolder;
   }
+
+  
   
   .projectList {
-    width: 70vw;
+    width: 100%;
     height: auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -49,6 +52,10 @@ projects {
   
   .projectItem h1 {
     font-size: 25px;
+  }
+
+  .projectItem .projectLink {
+    margin-bottom: 800px;
   }
   
   @media only screen and (max-width: 1300px) {
