--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -11,10 +11,8 @@ projects {
     text-align: center;
     color: #3e497a;
     font-size: 60px;
-    font-weight: bolder;
+    font-weight: bold;
   }
-
-  
   
   .projectList {
     width: 100%;
@@ -29,7 +27,7 @@ projects {
   .projectItem {
     border-radius: 15px;
     width: 300px;
-    height: 300px;
+    height: 310px;
     margin: 40px;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
     text-align: center;
@@ -37,7 +35,6 @@ projects {
   .projectItem:hover {
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.5);
     transition: 0.3s ease-in;
-    cursor: pointer;
   }
   
   .projectItem .bgImage {
@@ -48,14 +45,17 @@ projects {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    cursor: pointer;
   }
   
   .projectItem h1 {
+    margin-bottom: 8px;
     font-size: 25px;
   }
-
-  .projectItem .projectLink {
-    margin-bottom: 800px;
+  
+  .projectItem h2 {
+    margin-top: 8px;
+    font-size: 35px;
   }
   
   @media only screen and (max-width: 1300px) {
@@ -76,6 +76,6 @@ projects {
     }
     .projectItem {
       width: 300px;
-      height: 300px;
+      height: 310px;
     }
   }
