added styling to about and projects

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -11,8 +11,10 @@
 }
 
 .profile-pic {
-    width: 50%;
-    height: 70%;
+    // width: 50%;
+    // height: 70%;
+    width: 57vh;
+    height: 80vh;
     position: relative;
     border-radius: 25px;
 }
