--- a/src/components/ProjectDisplay/ProjectDisplay.css
+++ b/src/components/ProjectDisplay/ProjectDisplay.css
@@ -1,28 +1,79 @@
 .project {
-    width: 100%;
-    height: calc(100vh - 100px);
+  overflow: auto;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.project h1 {
+  margin-top: 500px;
+  color: #3e497a;
+  font-size: 35px;
+}
+
+.project img {
+  width: 700px;
+  border-radius: 10px;
+}
+
+.project p {
+  margin: 10vh;
+  padding-left: 48px;
+  font-size: 40px;
+  color: #fff;
+  text-align: center;
+}
+
+.project svg {
+  font-size: 60px;
+  color: #3e497a;
+}
+
+.project h2 {
+  /* margin-top: 14px; */
+  font-size: 58px;
+  color: #022c43;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  place-items: center;
+}
+
+.project h2:hover {
+  box-shadow: 0px 3px 15px #fff;
+  transition: 0.1s ease-in;
+}
+
+@media only screen and (max-width: 800px) {
+  .project {
+    overflow: auto;
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  }
+
+  .project h1 {
+    margin-top: 650px;
+  }
+
+  .project p {
+    /* overflow: auto; */
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-  }
-  
-  .project h1 {
-    margin-top: 50px;
-    color: #3e497a;
-    font-size: 35px;
-  }
-  .project img {
-    width: 700px;
-    border-radius: 10px;
-  }
-  
-  .project p {
+    /* margin: 4px; */
     font-size: 40px;
-    color: #3e497a;
+    text-align: center;
   }
-  
-  .project svg {
-    font-size: 60px;
-    color: #3e497a;
+
+  .project h2 {
+    /* margin-top: 14px; */
+    font-size: 58px;
+    color: #022c43;
+    /* display: grid;
+    grid-template-rows: 1fr 1fr;
+    place-items: center; */
   }
+}
