--- a/src/components/ProjectDisplay/ProjectDisplay.css
+++ b/src/components/ProjectDisplay/ProjectDisplay.css
@@ -50,8 +50,10 @@
   .project {
     overflow: auto;
     display: flex;
-  justify-content: center;
-  align-items: center;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
   }
 
   .project h1 {
