--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -78,25 +78,46 @@ projects {
 }
 
 @media only screen and (max-width: 1300px) {
+  projects {
+    margin-top: 14px;
+    overflow: auto;
+    width: 100%;
+    height: 100vh;
+  }
+
   .projectList {
     grid-template-columns: 1fr 1fr;
   }
 }
 
 @media only screen and (max-width: 800px) {
+  projects {
+    margin-top: 14px;
+    overflow: auto;
+    width: 100%;
+    height: 100vh;
+  }
+
   .projectList {
     grid-template-columns: 1fr;
   }
 }
 
 @media only screen and (max-width: 800px) {
+  projects {
+    margin-top: 14px;
+    overflow: auto;
+    width: 100%;
+    height: 100vh;
+  }
+
   .projectList {
     width: 100%;
   }
 
   .projectItem .bgImage:hover {
     opacity: none;
-  
+
   }
 
   .projectItem {
